--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "9a2388f1",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1466,7 @@
      "output_type": "stream",
      "text": [
       "Query 1: Lecturas del sensor SENS003 del día 2025-07-06:\n",
-      "Cassandra (0.0472 segundos):\n"
+      "Cassandra (0.0912 segundos):\n"
      ]
     },
     {
@@ -1591,7 +1591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PostgreSQL (0.0151 segundos):\n"
+      "PostgreSQL (0.0055 segundos):\n"
      ]
     },
     {
@@ -1714,7 +1714,7 @@
     }
    ],
    "source": [
-    "def query_1():\n",
+    "def query_1() -> None:\n",
     "    sensor_id = 'SENS003'\n",
     "    date = (datetime.now() - timedelta(days=3)).strftime('%Y-%m-%d')\n",
     "    print(f\"Query 1: Lecturas del sensor {sensor_id} del día {date}:\")\n",
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "id": "aae09a91",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1761,7 @@
      "output_type": "stream",
      "text": [
       "Query 2: Temperatura promedio de la última hora para múltiples sensores:\n",
-      "Cassandra (0.0836 segundos):\n"
+      "Cassandra (0.0929 segundos):\n"
      ]
     },
     {
@@ -1793,27 +1793,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>SENS001</td>\n",
-       "      <td>25.445897</td>\n",
+       "      <td>25.702443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SENS002</td>\n",
-       "      <td>24.819644</td>\n",
+       "      <td>24.236884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SENS003</td>\n",
-       "      <td>24.599464</td>\n",
+       "      <td>23.855362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SENS004</td>\n",
-       "      <td>24.660667</td>\n",
+       "      <td>25.725693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>SENS005</td>\n",
-       "      <td>25.968663</td>\n",
+       "      <td>26.446482</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1821,11 +1821,11 @@
       ],
       "text/plain": [
        "  sensor_id   avg_temp\n",
-       "0   SENS001  25.445897\n",
-       "1   SENS002  24.819644\n",
-       "2   SENS003  24.599464\n",
-       "3   SENS004  24.660667\n",
-       "4   SENS005  25.968663"
+       "0   SENS001  25.702443\n",
+       "1   SENS002  24.236884\n",
+       "2   SENS003  23.855362\n",
+       "3   SENS004  25.725693\n",
+       "4   SENS005  26.446482"
       ]
      },
      "metadata": {},
@@ -1835,7 +1835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PostgreSQL (0.1271 segundos):\n"
+      "PostgreSQL (0.0767 segundos):\n"
      ]
     },
     {
@@ -1867,27 +1867,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>SENS001</td>\n",
-       "      <td>25.445897</td>\n",
+       "      <td>25.702443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SENS002</td>\n",
-       "      <td>24.819644</td>\n",
+       "      <td>24.236884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SENS003</td>\n",
-       "      <td>24.599464</td>\n",
+       "      <td>23.855362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SENS004</td>\n",
-       "      <td>24.660667</td>\n",
+       "      <td>25.725693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>SENS005</td>\n",
-       "      <td>25.968663</td>\n",
+       "      <td>26.446482</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1895,11 +1895,11 @@
       ],
       "text/plain": [
        "  sensor_id   avg_temp\n",
-       "0   SENS001  25.445897\n",
-       "1   SENS002  24.819644\n",
-       "2   SENS003  24.599464\n",
-       "3   SENS004  24.660667\n",
-       "4   SENS005  25.968663"
+       "0   SENS001  25.702443\n",
+       "1   SENS002  24.236884\n",
+       "2   SENS003  23.855362\n",
+       "3   SENS004  25.725693\n",
+       "4   SENS005  26.446482"
       ]
      },
      "metadata": {},
@@ -1907,12 +1907,12 @@
     }
    ],
    "source": [
-    "def query_2():\n",
+    "def query_2() -> None:\n",
     "    print(\"Query 2: Temperatura promedio de la última hora para múltiples sensores:\")\n",
     "    sensor_ids = [f'SENS{str(i).zfill(3)}' for i in range(1, 6)]\n",
     "    date = datetime.now().strftime('%Y-%m-%d')\n",
     "    hour = datetime.now() - timedelta(hours=1)\n",
-    "    results = pd.DataFrame(columns=['sensor_id', 'avg_temp'])\n",
+    "    \n",
     "    prepared = cassandra.prepare(\"\"\"\n",
     "        select temperature\n",
     "        from temperature_measurements\n",
@@ -1920,16 +1920,17 @@
     "        and date = ?\n",
     "        and event_time >= ?\n",
     "    \"\"\")\n",
+    "    results = []\n",
     "    start = time.time()\n",
     "    for sensor_id in sensor_ids:\n",
     "        rows = list(cassandra.execute(prepared, (sensor_id, date, hour)))\n",
     "        avg_temp = sum(row.temperature for row in rows) / len(rows) if rows else None\n",
     "        row = {'sensor_id': sensor_id, 'avg_temp': avg_temp}\n",
-    "        results = pd.concat([results, pd.DataFrame([row])], ignore_index=True)\n",
+    "        results.append(row)\n",
     "    end = time.time()\n",
     "    cassandra_time = end - start\n",
     "    print(f\"Cassandra ({cassandra_time:.4f} segundos):\")\n",
-    "    display(results)\n",
+    "    display(pd.DataFrame(results))\n",
     "\n",
     "    query = \"\"\"\n",
     "        select sensor_id, avg(temperature) as avg_temp\n",
@@ -1946,8 +1947,291 @@
     "    print(f\"PostgreSQL ({postgres_time:.4f} segundos):\")\n",
     "    display(pd.DataFrame(rows, columns=['sensor_id', 'avg_temp']))\n",
     "\n",
-    "\n",
     "query_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "063f11c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query 3: Anomalías de temperatura del último día para el sensor SENS003:\n",
+      "Cassandra (0.0852 segundos):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_time</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-07-08 00:07:00</td>\n",
+       "      <td>11.719097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-07-08 00:24:00</td>\n",
+       "      <td>11.483746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-07-08 00:26:00</td>\n",
+       "      <td>13.354506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-07-08 00:33:00</td>\n",
+       "      <td>11.203284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-07-08 00:34:00</td>\n",
+       "      <td>12.737963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>2025-07-08 22:55:00</td>\n",
+       "      <td>36.212633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425</th>\n",
+       "      <td>2025-07-08 23:22:00</td>\n",
+       "      <td>38.680030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426</th>\n",
+       "      <td>2025-07-08 23:31:00</td>\n",
+       "      <td>37.853090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427</th>\n",
+       "      <td>2025-07-08 23:47:00</td>\n",
+       "      <td>36.550552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>428</th>\n",
+       "      <td>2025-07-08 23:50:00</td>\n",
+       "      <td>37.191001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>429 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             event_time  temperature\n",
+       "0   2025-07-08 00:07:00    11.719097\n",
+       "1   2025-07-08 00:24:00    11.483746\n",
+       "2   2025-07-08 00:26:00    13.354506\n",
+       "3   2025-07-08 00:33:00    11.203284\n",
+       "4   2025-07-08 00:34:00    12.737963\n",
+       "..                  ...          ...\n",
+       "424 2025-07-08 22:55:00    36.212633\n",
+       "425 2025-07-08 23:22:00    38.680030\n",
+       "426 2025-07-08 23:31:00    37.853090\n",
+       "427 2025-07-08 23:47:00    36.550552\n",
+       "428 2025-07-08 23:50:00    37.191001\n",
+       "\n",
+       "[429 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL (0.0030 segundos):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event_time</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-07-08 00:00:00</td>\n",
+       "      <td>36.981614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-07-08 00:05:00</td>\n",
+       "      <td>38.235439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-07-08 00:07:00</td>\n",
+       "      <td>11.719097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-07-08 00:08:00</td>\n",
+       "      <td>37.144994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-07-08 00:14:00</td>\n",
+       "      <td>36.326375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>2025-07-08 23:24:00</td>\n",
+       "      <td>12.891641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425</th>\n",
+       "      <td>2025-07-08 23:31:00</td>\n",
+       "      <td>37.853090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426</th>\n",
+       "      <td>2025-07-08 23:47:00</td>\n",
+       "      <td>36.550552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427</th>\n",
+       "      <td>2025-07-08 23:50:00</td>\n",
+       "      <td>37.191001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>428</th>\n",
+       "      <td>2025-07-08 23:54:00</td>\n",
+       "      <td>12.588746</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>429 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             event_time  temperature\n",
+       "0   2025-07-08 00:00:00    36.981614\n",
+       "1   2025-07-08 00:05:00    38.235439\n",
+       "2   2025-07-08 00:07:00    11.719097\n",
+       "3   2025-07-08 00:08:00    37.144994\n",
+       "4   2025-07-08 00:14:00    36.326375\n",
+       "..                  ...          ...\n",
+       "424 2025-07-08 23:24:00    12.891641\n",
+       "425 2025-07-08 23:31:00    37.853090\n",
+       "426 2025-07-08 23:47:00    36.550552\n",
+       "427 2025-07-08 23:50:00    37.191001\n",
+       "428 2025-07-08 23:54:00    12.588746\n",
+       "\n",
+       "[429 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def query_3() -> None:\n",
+    "    print(\"Query 3: Anomalías de temperatura del último día para el sensor SENS003:\")\n",
+    "    id = 'SENS003'\n",
+    "    date = (datetime.now() - timedelta(days=1)).strftime('%Y-%m-%d')\n",
+    "    low = NORMAL_RANGE[0][0]\n",
+    "    high = NORMAL_RANGE[0][1]\n",
+    "    prepared1 = cassandra.prepare(\"\"\"\n",
+    "        select event_time, temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        and temperature < ?\n",
+    "        allow filtering\n",
+    "    \"\"\")\n",
+    "    prepared2 = cassandra.prepare(\"\"\"\n",
+    "        select event_time, temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        and temperature > ?\n",
+    "        allow filtering\n",
+    "    \"\"\")\n",
+    "    start = time.time()\n",
+    "    rows_low = cassandra.execute(prepared1, (id, date, low))\n",
+    "    rows_high = cassandra.execute(prepared2, (id, date, high))\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "    print(f\"Cassandra ({cassandra_time:.4f} segundos):\")\n",
+    "    results = list(rows_low) + list(rows_high)\n",
+    "    display(pd.DataFrame(results))\n",
+    "\n",
+    "    query = \"\"\"\n",
+    "        select event_time, temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = %s\n",
+    "        and date = %s\n",
+    "        and (temperature < %s or temperature > %s)\n",
+    "    \"\"\"\n",
+    "    start = time.time()\n",
+    "    postgres.execute(query, (id, date, low, high))\n",
+    "    rows = postgres.fetchall()\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "    print(f\"PostgreSQL ({postgres_time:.4f} segundos):\")\n",
+    "    display(pd.DataFrame(rows, columns=['event_time', 'temperature']))\n",
+    "\n",
+    "query_3()"
    ]
   }
  ],
