--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c4378aa6",
    "metadata": {},
    "outputs": [],
@@ -1021,11 +1021,19 @@
     "        )\n",
     "    \"\"\")\n",
     "\n",
+    "def create_tables() -> None:\n",
+    "    create_table_cassandra()\n",
+    "    create_table_postgres()\n",
+    "\n",
     "def drop_table_cassandra() -> None:\n",
     "    cassandra.execute(\"drop table if exists temperature_measurements\")\n",
     "\n",
     "def drop_table_postgres() -> None:\n",
     "    postgres.execute(\"drop table if exists temperature_measurements\")\n",
+    "\n",
+    "def drop_tables() -> None:\n",
+    "    drop_table_cassandra()\n",
+    "    drop_table_postgres()\n",
     "\n",
     "NORMAL_RANGE = [(15, 35), (30, 80)]  # Rango normal para temperatura y humedad\n",
     "EXTENDED_RANGE = [(low - (high - low) * 0.2, high + (high - low) * 0.2) for low, high in NORMAL_RANGE]\n",
@@ -1243,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "2bb26d5d",
    "metadata": {},
    "outputs": [],
@@ -1752,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "aae09a91",
    "metadata": {},
    "outputs": [
@@ -1912,7 +1920,7 @@
     "    sensor_ids = [f'SENS{str(i).zfill(3)}' for i in range(1, 6)]\n",
     "    date = datetime.now().strftime('%Y-%m-%d')\n",
     "    hour = datetime.now() - timedelta(hours=1)\n",
-    "    \n",
+    "\n",
     "    prepared = cassandra.prepare(\"\"\"\n",
     "        select temperature\n",
     "        from temperature_measurements\n",
@@ -1920,7 +1928,7 @@
     "        and date = ?\n",
     "        and event_time >= ?\n",
     "    \"\"\")\n",
-    "    results = []\n",
+    "    results: list[dict] = []\n",
     "    start = time.time()\n",
     "    for sensor_id in sensor_ids:\n",
     "        rows = list(cassandra.execute(prepared, (sensor_id, date, hour)))\n",
@@ -1952,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "063f11c5",
    "metadata": {},
    "outputs": [
@@ -2213,7 +2221,7 @@
     "    end = time.time()\n",
     "    cassandra_time = end - start\n",
     "    print(f\"Cassandra ({cassandra_time:.4f} segundos):\")\n",
-    "    results = list(rows_low) + list(rows_high)\n",
+    "    results: list = list(rows_low) + list(rows_high)\n",
     "    display(pd.DataFrame(results))\n",
     "\n",
     "    query = \"\"\"\n",
@@ -2232,6 +2240,235 @@
     "    display(pd.DataFrame(rows, columns=['event_time', 'temperature']))\n",
     "\n",
     "query_3()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45d7bc17",
+   "metadata": {},
+   "source": [
+    "### c) Pruebas de Escalabilidad y Distribución:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1967cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dias</th>\n",
+       "      <th>query_1_postgres</th>\n",
+       "      <th>query_1_cassandra</th>\n",
+       "      <th>query_2_postgres</th>\n",
+       "      <th>query_2_cassandra</th>\n",
+       "      <th>query_3_postgres</th>\n",
+       "      <th>query_3_cassandra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.046451</td>\n",
+       "      <td>0.007188</td>\n",
+       "      <td>0.080746</td>\n",
+       "      <td>0.002201</td>\n",
+       "      <td>0.052265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.004999</td>\n",
+       "      <td>0.062288</td>\n",
+       "      <td>0.012226</td>\n",
+       "      <td>0.080369</td>\n",
+       "      <td>0.002729</td>\n",
+       "      <td>0.038299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.002019</td>\n",
+       "      <td>0.032457</td>\n",
+       "      <td>0.023674</td>\n",
+       "      <td>0.090534</td>\n",
+       "      <td>0.002949</td>\n",
+       "      <td>0.037638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.003553</td>\n",
+       "      <td>0.057512</td>\n",
+       "      <td>0.096373</td>\n",
+       "      <td>0.121468</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.058627</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   dias  query_1_postgres  query_1_cassandra  query_2_postgres   \n",
+       "0   7.0          0.000000           0.046451          0.007188  \\\n",
+       "1  15.0          0.004999           0.062288          0.012226   \n",
+       "2  30.0          0.002019           0.032457          0.023674   \n",
+       "3  60.0          0.003553           0.057512          0.096373   \n",
+       "\n",
+       "   query_2_cassandra  query_3_postgres  query_3_cassandra  \n",
+       "0           0.080746          0.002201           0.052265  \n",
+       "1           0.080369          0.002729           0.038299  \n",
+       "2           0.090534          0.002949           0.037638  \n",
+       "3           0.121468          0.000000           0.058627  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def query_1_test() -> tuple[float, float]:\n",
+    "    sensor_id = 'SENS003'\n",
+    "    date = (datetime.now() - timedelta(days=3)).strftime('%Y-%m-%d')\n",
+    "    prepared = cassandra.prepare(\"\"\"\n",
+    "        select event_time, temperature, humidity\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        order by event_time desc\n",
+    "    \"\"\")\n",
+    "    start = time.time()\n",
+    "    rows = cassandra.execute(prepared, (sensor_id, date))\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "    start = time.time()\n",
+    "    postgres.execute(\"\"\"\n",
+    "        select event_time, temperature, humidity\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = %s\n",
+    "        and date = %s\n",
+    "        order by event_time desc\n",
+    "    \"\"\", (sensor_id, date))\n",
+    "    rows = postgres.fetchall()\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "    return postgres_time, cassandra_time\n",
+    "\n",
+    "def query_2_test() -> tuple[float, float]:\n",
+    "    date = datetime.now().strftime('%Y-%m-%d')\n",
+    "    hour = datetime.now() - timedelta(hours=1)\n",
+    "    prepared = cassandra.prepare(\"\"\"\n",
+    "        select temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        and event_time >= ?\n",
+    "    \"\"\")\n",
+    "    sensor_ids = [f'SENS{str(i).zfill(3)}' for i in range(1, 6)]\n",
+    "    results: list[dict] = []\n",
+    "    start = time.time()\n",
+    "    for sensor_id in sensor_ids:\n",
+    "        rows = list(cassandra.execute(prepared, (sensor_id, date, hour)))\n",
+    "        avg_temp = sum(row.temperature for row in rows) / len(rows) if rows else None\n",
+    "        row = {'sensor_id': sensor_id, 'avg_temp': avg_temp}\n",
+    "        results.append(row)\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "    query = \"\"\"\n",
+    "        select sensor_id, avg(temperature) as avg_temp\n",
+    "        from temperature_measurements\n",
+    "        where date = %s\n",
+    "        and event_time >= %s\n",
+    "        group by sensor_id\n",
+    "    \"\"\"\n",
+    "    start = time.time()\n",
+    "    postgres.execute(query, (date, hour))\n",
+    "    rows = postgres.fetchall()\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "    return postgres_time, cassandra_time\n",
+    "\n",
+    "def query_3_test() -> tuple[float, float]:\n",
+    "    id = 'SENS003'\n",
+    "    date = (datetime.now() - timedelta(days=1)).strftime('%Y-%m-%d')\n",
+    "    low = NORMAL_RANGE[0][0]\n",
+    "    high = NORMAL_RANGE[0][1]\n",
+    "    prepared1 = cassandra.prepare(\"\"\"\n",
+    "        select event_time, temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        and temperature < ?\n",
+    "        allow filtering\n",
+    "    \"\"\")\n",
+    "    prepared2 = cassandra.prepare(\"\"\"\n",
+    "        select event_time, temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        and temperature > ?\n",
+    "        allow filtering\n",
+    "    \"\"\")\n",
+    "    start = time.time()\n",
+    "    rows_low = cassandra.execute(prepared1, (id, date, low))\n",
+    "    rows_high = cassandra.execute(prepared2, (id, date, high))\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "    query = \"\"\"\n",
+    "        select event_time, temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = %s\n",
+    "        and date = %s\n",
+    "        and (temperature < %s or temperature > %s)\n",
+    "    \"\"\"\n",
+    "    start = time.time()\n",
+    "    postgres.execute(query, (id, date, low, high))\n",
+    "    rows = postgres.fetchall()\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "    return postgres_time, cassandra_time\n",
+    "\n",
+    "def test_queries() -> None:\n",
+    "    volumes: list[int] = [7, 15, 30, 60]\n",
+    "    columns = ['dias'] + [f'query_{i}_{db}' for i in range(1, 4) for db in ['postgres', 'cassandra']]\n",
+    "    results = pd.DataFrame(columns=columns, dtype=float)\n",
+    "    for volume in volumes:\n",
+    "        row = {'dias': float(volume)}\n",
+    "        drop_tables()\n",
+    "        create_tables()\n",
+    "        data: list[tuple] = generate_data(5, volume)\n",
+    "        insert_cassandra_async(data, 1000, 16)\n",
+    "        insert_postgres_async(data, 1000, 16)\n",
+    "        queries = [query_1_test, query_2_test, query_3_test]\n",
+    "        for i, query in enumerate(queries, start=1):\n",
+    "            row[f'query_{i}_postgres'], row[f'query_{i}_cassandra'] = query()\n",
+    "        results = pd.concat([results, pd.DataFrame([row])], ignore_index=True)\n",
+    "    display(results)\n",
+    "\n",
+    "test_queries()"
    ]
   }
  ],
