--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -2247,7 +2247,11 @@
    "id": "45d7bc17",
    "metadata": {},
    "source": [
-    "### c) Pruebas de Escalabilidad y Distribución:\n"
+    "### c) Pruebas de Escalabilidad y Distribución:\n",
+    "\n",
+    "#### Evaluar el rendimiento con diferentes tamaños de dataset\n",
+    "\n",
+    "A continuación se presenta una código que genera un tabla.\n"
    ]
   },
   {
@@ -2469,6 +2473,28 @@
     "    display(results)\n",
     "\n",
     "test_queries()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bc74f6ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error during connect: Get \"http://%2F%2F.%2Fpipe%2FdockerDesktopLinuxEngine/v1.47/containers/cassandra1/json\": open //./pipe/dockerDesktopLinuxEngine: The system cannot find the file specified.\n",
+      "error during connect: Get \"http://%2F%2F.%2Fpipe%2FdockerDesktopLinuxEngine/v1.47/containers/cassandra2/json\": open //./pipe/dockerDesktopLinuxEngine: The system cannot find the file specified.\n",
+      "error during connect: Get \"http://%2F%2F.%2Fpipe%2FdockerDesktopLinuxEngine/v1.47/containers/cassandra3/json\": open //./pipe/dockerDesktopLinuxEngine: The system cannot find the file specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker exec cassandra1 nodetool status\n",
+    "!docker exec cassandra2 nodetool status\n",
+    "!docker exec cassandra3 nodetool status"
    ]
   }
  ],
