--- a/Lab14/p1.tex
+++ b/Lab14/p1.tex
@@ -2,3 +2,6 @@
 
 Tuvimos errores al momento de conectar MongoDB Compass con docker, por lo que no pudimos realizar el ítem completo.
 Sin embargo, sí pudimos crear el $replicaSet$; el resultado de $rs.status()$ se encuentra en el anexo.
+
+Como se mencionó en la guía, el proceso de configuración incluye levantar los contenedores con Docker Compose, conectarse
+al shell de MongoDB de uno de los contenedores, e iniciar el $replicaSet$.
